Actualización de notebooks de tipo de recursividad

--- a/3. Tipos de Recursión.ipynb
+++ b/3. Tipos de Recursión.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -24,20 +24,22 @@
      "output_type": "stream",
      "text": [
       "Resultado del factorial como ejemplo de líneal no final\n",
-      "120\n"
+      "5040\n"
      ]
     }
    ],
    "source": [
-    "#Ejemplo del factorial\n",
+    "# Ejemplo del factorial\n",
     "\n",
-    "def fact(num):\n",
+    "# 6! => 1 x 2 x 3 x 4 x 5 x 6 = 720\n",
+    "\n",
+    "def factorial(num):\n",
     "    if(num == 1 or num == 0):\n",
     "        return 1\n",
-    "    return num * fact(num - 1)\n",
+    "    return num * factorial(num - 1)\n",
     "\n",
     "print(\"Resultado del factorial como ejemplo de líneal no final\")\n",
-    "print(fact(5))"
+    "print(factorial(7))"
    ]
   },
   {
@@ -49,28 +51,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ejemplo del mínimo común divisor\n",
+    "\n",
+    "# Revisar el ejemplo del notebook 2, donde se muestran \n",
+    "# las operaciones necesarias para la multiplicación a través de sumatorias.\n",
+    "\n",
+    "\n",
+    "#Otro ejemplo es el factorial mediante el cálculo ordenado de menor a mayor\n",
+    "\n",
+    "def factorialLinealFinal(n, numFact, res):\n",
+    "    if(n == numFact):\n",
+    "        print(\"El resultado es: \", res)\n",
+    "    else:\n",
+    "        res = res * (n+1)\n",
+    "        factorialLinealFinal(n+1, numFact, res)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3\n"
+      "El resultado es:  5040\n"
      ]
     }
    ],
    "source": [
-    "# ejemplo del mínimo común divisor\n",
-    "\n",
-    "def mcd(n, m):\n",
-    "    if(n == m):\n",
-    "        return n\n",
-    "    if(n > m):\n",
-    "        return mcd(n-m, m)\n",
-    "    return mcd(n, m-n)\n",
-    "\n",
-    "print(mcd(15, 18))"
+    "factorialLinealFinal(1, 7, 1)"
    ]
   },
   {
