--- a/3. Tipos de Recursión.ipynb
+++ b/3. Tipos de Recursión.ipynb
@@ -138,24 +138,154 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "------\n",
+      "------\n",
+      "------\n",
+      "------\n",
+      "------\n",
+      "------\n",
+      "------\n",
+      "------\n",
+      "------\n",
+      "------\n",
+      "------\n",
+      "------\n",
+      "------\n",
+      "------\n",
+      "------\n",
+      "------\n",
+      "------\n",
+      "------\n",
+      "------\n",
+      "------\n",
+      "------\n",
+      "------\n",
+      "------\n",
+      "------\n",
+      "------\n",
+      "------\n",
+      "------\n",
+      "------\n",
+      "------\n",
+      "------\n",
+      "------\n",
+      "------\n",
+      "------\n",
+      "------\n",
+      "------\n",
+      "------\n",
+      "------\n",
+      "------\n",
+      "------\n",
+      "------\n",
+      "------\n",
+      "------\n",
+      "------\n",
+      "------\n",
+      "------\n",
+      "------\n",
+      "------\n",
+      "------\n",
+      "------\n",
+      "------\n",
+      "------\n",
+      "------\n",
+      "------\n",
+      "------\n",
+      "------\n",
+      "------\n",
+      "------\n",
+      "------\n",
+      "------\n",
+      "------\n",
+      "------\n",
+      "------\n",
+      "------\n",
+      "------\n",
+      "------\n",
+      "------\n",
+      "------\n",
+      "------\n",
+      "------\n",
+      "------\n",
+      "------\n",
+      "------\n",
+      "------\n",
+      "------\n",
+      "------\n",
+      "------\n",
+      "------\n",
+      "------\n",
+      "------\n",
+      "------\n",
+      "------\n",
+      "------\n",
+      "------\n",
+      "------\n",
+      "------\n",
+      "------\n",
+      "------\n",
+      "------\n",
       "55\n"
      ]
     }
    ],
    "source": [
+    "entorno = 1\n",
     "def fib(num):\n",
     "    if(num == 0 or num == 1):\n",
     "        return num\n",
+    "    print(\"------\")\n",
     "    return fib(num-1) + fib(num-2)\n",
     "\n",
     "print(fib(10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ingrese el número a calcular: 10\n",
+      "------\n",
+      "------\n",
+      "------\n",
+      "------\n",
+      "------\n",
+      "------\n",
+      "------\n",
+      "------\n",
+      "------\n",
+      "55\n"
+     ]
+    }
+   ],
+   "source": [
+    "def fibonacci(num, calculados):\n",
+    "    if(calculados[num-1] != -1):\n",
+    "        return calculados[num-1]\n",
+    "    if(num == 0 or num == 1):\n",
+    "        calculados[num-1] = num\n",
+    "        return num\n",
+    "    print(\"------\")\n",
+    "    f = fibonacci(num-1, calculados) + fibonacci(num-2, calculados)\n",
+    "    calculados[num-1] = f\n",
+    "    return f;\n",
+    "\n",
+    "n = int(input(\"Ingrese el número a calcular: \"))\n",
+    "lista = [-1 for x in range(n)]\n",
+    "print(fibonacci(n, lista))"
    ]
   },
   {
