--- a/4. Backtracking.ipynb
+++ b/4. Backtracking.ipynb
@@ -228,6 +228,70 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "range(1, -1, -1)\n",
+      "range(2, -1, -1)\n",
+      "1 ,  2\n",
+      "0 ,  1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Funcionamiento de ZIP específico para 4x4 en la posición fila:1 y columna: 2 para la diagonal superior\n",
+    "# range(start, stop, step) tomado de https://www.w3schools.com/python/ref_func_range.asp\n",
+    "rangeRow = range(1,-1,-1) # => 1, 0\n",
+    "rangeCol = range(2,-1,-1) # => 2, 1, 0\n",
+    "\n",
+    "print(rangeRow)\n",
+    "print(rangeCol)\n",
+    "\n",
+    "zipped = zip(rangeRow, rangeCol)\n",
+    "\n",
+    "for i, j in zipped:\n",
+    "    print(i, ', ', j)\n",
+    "    \n",
+    "#for i in range(100, 70, -5):\n",
+    " #   print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "range(1, 4)\n",
+      "range(2, -1, -1)\n",
+      "1 ,  2\n",
+      "2 ,  1\n",
+      "3 ,  0\n"
+     ]
+    }
+   ],
+   "source": [
+    "rangeRow = range(1, 4, 1) # => 1, 2, 3\n",
+    "rangeCol = range(2,-1,-1) # => 2, 1, 0\n",
+    "\n",
+    "print(rangeRow)\n",
+    "print(rangeCol)\n",
+    "\n",
+    "zipped = zip(rangeRow, rangeCol)\n",
+    "\n",
+    "for i, j in zipped:\n",
+    "    print(i, ', ', j)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -250,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -320,6 +384,13 @@
     "\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
