Solución completa de cuadro mágico NxN

--- a/4. Backtracking.ipynb
+++ b/4. Backtracking.ipynb
@@ -314,27 +314,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "65.0\n",
-      "[0, 0, 0, 0, 0]\n",
-      "[0, 0, 0, 0, 0]\n",
-      "[0, 0, 0, 0, 0]\n",
-      "[0, 0, 0, 0, 0]\n",
-      "[0, 0, 0, 0, 0]\n",
+      "15.0\n",
+      "[0, 0, 0]\n",
+      "[0, 0, 0]\n",
+      "[0, 0, 0]\n",
       "\n",
       " ---------------------------------- \n",
       "\n",
-      "[17, 24, 1, 8, 15]\n",
-      "[23, 5, 7, 14, 16]\n",
-      "[4, 6, 13, 20, 22]\n",
-      "[10, 12, 19, 21, 3]\n",
-      "[11, 18, 25, 2, 9]\n"
+      "[8, 1, 6]\n",
+      "[3, 5, 7]\n",
+      "[4, 9, 2]\n"
      ]
     }
    ],
@@ -362,7 +358,14 @@
     "                col=bcol-1;\n",
     "    for row in matrix:\n",
     "        print(row)\n",
-    "magicSquare(5)\n"
+    "magicSquare(3)\n",
+    "    print(\"Suma diagonal_0_0: \", sumaDiagonal_0_0)\n",
+    "    print(\"Suma diagonal_N_0: \", sumaDiagonal_N_0)\n",
+    "    \n",
+    "    \n",
+    "        print(\"----------------------\")\n",
+    "        print(\"Evaluando: \", num)\n",
+    "        print(\"Coordenadas: (\", fila, \", \", col, \")\")\n"
    ]
   },
   {
