--- a/8. Solución Ejercicio Cuadro Mágico NxN.ipynb
+++ b/8. Solución Ejercicio Cuadro Mágico NxN.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -31,80 +31,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "65\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "[[0, 0, 0, 0, 0],\n",
-       " [0, 0, 0, 0, 0],\n",
-       " [0, 0, 0, 0, 0],\n",
-       " [0, 0, 0, 0, 0],\n",
-       " [0, 0, 0, 0, 0]]"
-      ]
-     },
-     "execution_count": 54,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "cuadrado = [[0 for i in range(N)] for j in range(N)]\n",
     "\n",
     "TotalSuma = int((N * (N**2 + 1)) / 2)\n",
-    "print(TotalSuma)\n",
-    "cuadrado"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sin solución\n",
-      "[7, 9, 15, 19, 0]\n",
-      "[8, 10, 11, 22, 0]\n",
-      "[13, 14, 17, 20, 0]\n",
-      "[24, 21, 18, 12, 0]\n",
-      "[25, 23, 16, 5, 0]\n"
-     ]
-    }
-   ],
-   "source": [
+    "\n",
     "def SolucionarCuadradoNxN(tablero, col, fila):\n",
     "    if(col >= N):\n",
     "        return True\n",
     "    \n",
     "    for num in range(1, (N**2+1), 1):\n",
+    "        #print(\"----------------------\")\n",
+    "        #print(\"Evaluando: \", num)\n",
+    "        #print(\"Coordenadas: (\", fila, \", \", col, \")\")\n",
     "        if(esValorValido(tablero, col, fila, num)):\n",
     "            tablero[fila][col] = num\n",
+    "            # Se imprime el tablero para realizar un seguimiento del proceso\n",
+    "            #ImprimirTablero(tablero)\n",
+    "            \n",
     "            if(fila == N - 1):\n",
     "                if(SolucionarCuadradoNxN(tablero, col + 1, 0)):\n",
     "                    return True\n",
     "            else:\n",
     "                if(SolucionarCuadradoNxN(tablero, col, fila + 1)):\n",
     "                    return True\n",
-    "    return False\n",
-    "\n",
+    "            tablero[fila][col] = 0\n",
     "def esValorValido(tablero, col, fila, num):\n",
-    "     return EsNumeroUnico(tablero, col, fila, num) and ValidoEnColumna(tablero, col, fila, num) and ValidoEnFila(tablero, col, fila, num)\n",
+    "     return EsNumeroUnico(tablero, col, fila, num) and ValidoEnDiagonales(tablero, col, fila, num) and ValidoEnColumna(tablero, col, fila, num) and ValidoEnFila(tablero, col, fila, num)\n",
+    "\n",
+    "\"\"\"\n",
+    "Validación de las diagonales según los diferentes casos que se pueden presentar en el ejercicio\n",
+    "\"\"\"\n",
+    "def ValidoEnDiagonales(tablero, col, fila, num):\n",
+    "    sumaDiagonal_0_0 = 0\n",
+    "    sumaDiagonal_N_0 = 0\n",
+    "    for i,j in zip(range(0, N, 1), range(0, N+1, 1)):\n",
+    "        if(i == fila and j == col):\n",
+    "            sumaDiagonal_0_0 += num\n",
+    "        else:\n",
+    "            sumaDiagonal_0_0 += tablero[i][j]\n",
+    "    for i,j in zip(range(N-1, -1, -1), range(0, N+1, 1)): \n",
+    "        if(i == fila and j == col):\n",
+    "            sumaDiagonal_N_0 += num\n",
+    "        else:\n",
+    "            sumaDiagonal_N_0 += tablero[i][j]\n",
+    "    #print(\"Suma diagonal_0_0: \", sumaDiagonal_0_0)\n",
+    "    #print(\"Suma diagonal_N_0: \", sumaDiagonal_N_0)\n",
+    "    if((col < N-1 and sumaDiagonal_0_0 < TotalSuma and sumaDiagonal_N_0 < TotalSuma) or (col == N-1 and fila == N-1 and sumaDiagonal_0_0 == TotalSuma and sumaDiagonal_N_0 == TotalSuma) or (col == N-1 and fila < N-1 and sumaDiagonal_0_0 < TotalSuma and sumaDiagonal_N_0 == TotalSuma)):\n",
+    "        return True\n",
+    "    return False\n",
     "    \n",
+    "\"\"\"\n",
+    "Validación de sumatoria en columna\n",
+    "\"\"\"\n",
     "def ValidoEnColumna(tablero, col, fila, num):\n",
     "    sumaTemp = 0\n",
     "    if(fila == N-1):\n",
-    "        #evaluar diagonales superiores (izquierda y derecha)\n",
+    "        \n",
     "        for i in range(fila):\n",
     "            sumaTemp += tablero[i][col]\n",
     "        if(sumaTemp + num == TotalSuma):\n",
@@ -119,11 +112,13 @@
     "        else:\n",
     "            return False\n",
     "\n",
-    "        \n",
+    "       \n",
+    "\"\"\"\n",
+    "Validación de sumatoria en fila\n",
+    "\"\"\" \n",
     "def ValidoEnFila(tablero, col, fila, num):\n",
     "    sumaTemp = 0\n",
     "    if(col == N-1):\n",
-    "        #evaluar diagonales izquierdas (superior e inferior)\n",
     "        for i in range(col):\n",
     "            sumaTemp += tablero[fila][i]\n",
     "        if(sumaTemp + num == TotalSuma):\n",
@@ -138,20 +133,37 @@
     "        else:\n",
     "            return False\n",
     "        \n",
+    "\"\"\"\n",
+    "Validación de que el número no esté repetido en el tablero\n",
+    "\"\"\"\n",
     "def EsNumeroUnico(tablero, col, fila, num):\n",
     "    for fila in tablero:\n",
     "        if num in fila:\n",
     "            return False\n",
     "    return True\n",
     "\n",
+    "def ImprimirTablero(tablero):\n",
+    "    print(\"---------------\")\n",
+    "    for linea in tablero:\n",
+    "        print(linea)\n",
+    "\n",
     "if(SolucionarCuadradoNxN(cuadrado, 0, 0)):\n",
+    "    print(\"**************************************************\")\n",
     "    print(\"Solucionado\")\n",
+    "    print(\"**************************************************\")\n",
     "else:\n",
     "    print(\"Sin solución\")\n",
     "\n",
     "for fila in cuadrado:\n",
     "    print(fila)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
