Se corrigen comentarios en ejercicio backtracking

--- a/4. Backtracking.ipynb
+++ b/4. Backtracking.ipynb
@@ -358,14 +358,7 @@
     "                col=bcol-1;\n",
     "    for row in matrix:\n",
     "        print(row)\n",
-    "magicSquare(3)\n",
-    "    print(\"Suma diagonal_0_0: \", sumaDiagonal_0_0)\n",
-    "    print(\"Suma diagonal_N_0: \", sumaDiagonal_N_0)\n",
-    "    \n",
-    "    \n",
-    "        print(\"----------------------\")\n",
-    "        print(\"Evaluando: \", num)\n",
-    "        print(\"Coordenadas: (\", fila, \", \", col, \")\")\n"
+    "magicSquare(3)\n"
    ]
   },
   {
