Se agregan recorridos y búsqueda al árbol

--- a/9. TAD Árbol Binario de Búsqueda - BST.ipynb
+++ b/9. TAD Árbol Binario de Búsqueda - BST.ipynb
@@ -11,24 +11,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
     "class Nodo:\n",
     "    #Constructor: (llave, valor, hijoIzquierdo, hijoDerecho, padre)\n",
-    "    def __init__(self, llave, valor, hijoIzquierdo = None, hijoDerecho = None, padre = None):\n",
+    "    def __init__(self, llave, valor, padre = None, hijoIzquierdo = None, hijoDerecho = None):\n",
     "        self.llave = llave\n",
     "        self.valor = valor\n",
     "        self.hijoIzquierdo = hijoIzquierdo\n",
     "        self.hijoDerecho = hijoDerecho\n",
     "        self.padre = padre\n",
     "        \n",
-    "    #Validar sí el nodo tiene hijo izquierdo\n",
-    "    def TieneHijoIzquierdo(self):\n",
-    "        return self.hijoIzquierdo\n",
-    "        \n",
-    "    #Retornar el nodo del hijo izquierdo\n",
+    "    #Retornar el nodo del hijo izquierdo [None cuando no tiene hijo]\n",
     "    def ObtenerHijoIzquierdo(self):\n",
     "        return self.hijoIzquierdo\n",
     "        \n",
@@ -36,11 +32,7 @@
     "    def PonerHijoIzquierdo(self, hijo):\n",
     "        self.hijoIzquierdo = hijo\n",
     "    \n",
-    "    #Validar sí el nodo tiene hijo derecho\n",
-    "    def TieneHijoDerecho(self):\n",
-    "        return self.hijoDerecho\n",
-    "    \n",
-    "    #Retornar el nodo del hijo derecho\n",
+    "    #Retornar el nodo del hijo derecho [None cuando no tiene hijo]\n",
     "    def ObtenerHijoDerecho(self):\n",
     "        return self.hijoDerecho\n",
     "        \n",
@@ -70,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,27 +83,68 @@
     "            # agregar el nuevo nodo como raíz\n",
     "            self.raiz = Nodo(llave, valor)\n",
     "            print(\"El nodo \", llave, \" se ha agregado.\")\n",
-    "            \n",
+    "    \n",
     "    def _AgregarNodo(self, llave, valor, nodo):\n",
     "        #verificar sí es menor o mayor para ir por la izq o derecha respectivamente\n",
     "        if(valor < nodo.valor):\n",
-    "            if(nodo.TieneHijoIzquierdo()):\n",
+    "            if(nodo.ObtenerHijoIzquierdo()): #verifica si tiene hijo izq\n",
     "                # se llama recursivamente al hijo implicado\n",
     "                self._AgregarNodo(llave, valor, nodo.ObtenerHijoIzquierdo())\n",
     "            else:\n",
     "                # se crea un nuevo nodo y se asigna como hijo\n",
-    "                nuevoNodo = Nodo(llave, valor)\n",
+    "                nuevoNodo = Nodo(llave, valor, nodo)\n",
     "                nodo.PonerHijoIzquierdo(nuevoNodo)\n",
     "                print(\"Se ha agregado como hijo izquierdo de \", nodo.llave, \" a \", nuevoNodo.llave)\n",
     "        else:\n",
-    "            if(nodo.TieneHijoDerecho()):\n",
-    "                # se llama recursivamente al hijo implicado\n",
-    "                self._AgregarNodo(llave, valor, nodo.ObtenerHijoDerecho())\n",
+    "            if(valor > nodo.valor):\n",
+    "                if(nodo.ObtenerHijoDerecho()): # verifica si tiene hijo derecho\n",
+    "                    # se llama recursivamente al hijo implicado\n",
+    "                    self._AgregarNodo(llave, valor, nodo.ObtenerHijoDerecho())\n",
+    "                else:\n",
+    "                    # se crea un nuevo nodo y se asigna como hijo\n",
+    "                    nuevoNodo = Nodo(llave, valor, nodo)\n",
+    "                    nodo.PonerHijoDerecho(nuevoNodo)\n",
+    "                    print(\"Se ha agregado como hijo derecho de \", nodo.llave, \" a \", nuevoNodo.llave)\n",
+    "    \n",
+    "    #Pre-order (R-I-D)\n",
+    "    def imprimir_pre_order(self, nodo):\n",
+    "        if(nodo):\n",
+    "            print(nodo.valor)\n",
+    "            self.imprimir_pre_order(nodo.ObtenerHijoIzquierdo())\n",
+    "            self.imprimir_pre_order(nodo.ObtenerHijoDerecho())\n",
+    "            \n",
+    "    #In-order (I-R-D)\n",
+    "    def imprimir_in_order(self, nodo):\n",
+    "        if(nodo):\n",
+    "            self.imprimir_in_order(nodo.ObtenerHijoIzquierdo())\n",
+    "            print(nodo.valor)\n",
+    "            self.imprimir_in_order(nodo.ObtenerHijoDerecho())\n",
+    "            \n",
+    "    #Post-order (I-D-R)\n",
+    "    def imprimir_post_order(self, nodo):\n",
+    "        if(nodo):\n",
+    "            self.imprimir_post_order(nodo.ObtenerHijoIzquierdo())\n",
+    "            self.imprimir_post_order(nodo.ObtenerHijoDerecho())\n",
+    "            print(nodo.valor)\n",
+    "    \n",
+    "    def buscarNodo(self, busqueda):\n",
+    "        if self.raiz:\n",
+    "            #iniciar búsqueda\n",
+    "            return self._buscarNodo(busqueda, self.raiz)\n",
+    "        else:\n",
+    "            print(\"El árbol está vacio y no se puede buscar.\")\n",
+    "            return None\n",
+    "    \n",
+    "    def _buscarNodo(self, busqueda, nodo):\n",
+    "        if not nodo:\n",
+    "            return None\n",
+    "        if(busqueda == nodo.valor):\n",
+    "            return nodo\n",
+    "        else:\n",
+    "            if(busqueda < nodo.valor):\n",
+    "                return self._buscarNodo(busqueda, nodo.ObtenerHijoIzquierdo())\n",
     "            else:\n",
-    "                # se crea un nuevo nodo y se asigna como hijo\n",
-    "                nuevoNodo = Nodo(llave, valor)\n",
-    "                nodo.PonerHijoDerecho(nuevoNodo)\n",
-    "                print(\"Se ha agregado como hijo derecho de \", nodo.llave, \" a \", nuevoNodo.llave)"
+    "                return self._buscarNodo(busqueda, nodo.ObtenerHijoDerecho())"
    ]
   },
   {
@@ -124,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -166,6 +199,116 @@
     "\n",
     "pre-order, in-order y post-order"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "50\n",
+      "23\n",
+      "7\n",
+      "4\n",
+      "19\n",
+      "78\n",
+      "62\n",
+      "58\n",
+      "71\n",
+      "101\n"
+     ]
+    }
+   ],
+   "source": [
+    "# in-order\n",
+    "abb.imprimir_pre_order(abb.raiz)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "7\n",
+      "19\n",
+      "23\n",
+      "50\n",
+      "58\n",
+      "62\n",
+      "71\n",
+      "78\n",
+      "101\n"
+     ]
+    }
+   ],
+   "source": [
+    "# in-order\n",
+    "abb.imprimir_in_order(abb.raiz)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "19\n",
+      "7\n",
+      "23\n",
+      "58\n",
+      "71\n",
+      "62\n",
+      "101\n",
+      "78\n",
+      "50\n"
+     ]
+    }
+   ],
+   "source": [
+    "# post-order\n",
+    "abb.imprimir_post_order(abb.raiz)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El nodo con valor  58  si se encuentra y está con la llave de acceso  H  y su padre es:  E\n"
+     ]
+    }
+   ],
+   "source": [
+    "busqueda = 58\n",
+    "resultado = abb.buscarNodo(busqueda)\n",
+    "if(resultado):\n",
+    "    print(\"El nodo con valor \", busqueda, \" si se encuentra y está con la llave de acceso \", resultado.llave, \" y su padre es: \", resultado.padre.llave)\n",
+    "else:\n",
+    "    print(\"El valor \", busqueda, \" no se encuentra en el árbol.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
