Se agregan funcionalidades de pesos por nivel y búsqueda por llave

--- a/9. TAD Árbol Binario de Búsqueda - BST.ipynb
+++ b/9. TAD Árbol Binario de Búsqueda - BST.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +162,7 @@
     "        else:\n",
     "            print(\"El árbol está vacío.\")\n",
     "            \n",
-    "    #Recorrido en Amplitud\n",
+    "    #Verifica que un árbol sea impar\n",
     "    def EsArbolImpar(self, nodo):\n",
     "        if(nodo):\n",
     "            cola = [nodo]\n",
@@ -192,25 +192,40 @@
     "        else:\n",
     "            print(\"El árbol está vacío.\")\n",
     "    \n",
-    "    def buscarNodo(self, busqueda):\n",
+    "    def buscarNodoPorValor(self, busqueda):\n",
     "        if self.raiz:\n",
     "            #iniciar búsqueda\n",
-    "            return self._buscarNodo(busqueda, self.raiz)\n",
+    "            return self._buscarNodoPorValor(busqueda, self.raiz)\n",
     "        else:\n",
     "            print(\"El árbol está vacio y no se puede buscar.\")\n",
     "            return None\n",
     "    \n",
-    "    def _buscarNodo(self, busqueda, nodo):\n",
+    "    def _buscarNodoPorValor(self, busqueda, nodo):\n",
     "        if not nodo:\n",
     "            return None\n",
     "        if(busqueda == nodo.valor):\n",
     "            return nodo\n",
     "        else:\n",
     "            if(busqueda < nodo.valor):\n",
-    "                return self._buscarNodo(busqueda, nodo.ObtenerHijoIzquierdo())\n",
+    "                return self._buscarNodoPorValor(busqueda, nodo.ObtenerHijoIzquierdo())\n",
     "            else:\n",
-    "                return self._buscarNodo(busqueda, nodo.ObtenerHijoDerecho())\n",
+    "                return self._buscarNodoPorValor(busqueda, nodo.ObtenerHijoDerecho())\n",
     "            \n",
+    "    def buscarNodoPorLlave(self, busqueda):\n",
+    "        if self.raiz:\n",
+    "            #iniciar búsqueda\n",
+    "            return self._buscarNodoPorLlave(busqueda, self.raiz)\n",
+    "        else:\n",
+    "            print(\"El árbol está vacio y no se puede buscar.\")\n",
+    "            return None\n",
+    "        \n",
+    "    def _buscarNodoPorLlave(self, busqueda, nodo):\n",
+    "        if(nodo):\n",
+    "            if(nodo.llave.upper() == busqueda.upper()):\n",
+    "                print(\"Si se encuentra la llave \", busqueda, \" en el nodo con valor \", nodo.valor)\n",
+    "                return nodo\n",
+    "            return self._buscarNodoPorLlave(busqueda, nodo.ObtenerHijoIzquierdo()) or self._buscarNodoPorLlave(busqueda, nodo.ObtenerHijoDerecho())\n",
+    "        \n",
     "    def AgregarBalota(self, nodo, balota):\n",
     "        if(not nodo):\n",
     "            print(\"Árbol vacío\")\n",
@@ -262,7 +277,26 @@
     "                print(nodo.balotas)\n",
     "                print(\"------------------------------------------------\")\n",
     "                self.NodosConSusBalotas(nodo.ObtenerHijoIzquierdo()) \n",
-    "                self.NodosConSusBalotas(nodo.ObtenerHijoDerecho())"
+    "                self.NodosConSusBalotas(nodo.ObtenerHijoDerecho())\n",
+    "                \n",
+    "    #Mostrar peso del árbol por niveles y el total del árbol\n",
+    "    def PesoPorNiveles(self, nodo):\n",
+    "        if(nodo):\n",
+    "            cola = [nodo]\n",
+    "            pesosPorNivel = [0 for i in range(self.altura)]\n",
+    "            while(len(cola) > 0):\n",
+    "                nodoActual = cola.pop(0)\n",
+    "                pesosPorNivel[nodoActual.ObtenerNivel() - 1] += 1\n",
+    "                hijoIzq = nodoActual.ObtenerHijoIzquierdo()\n",
+    "                hijoDer = nodoActual.ObtenerHijoDerecho()\n",
+    "                if(hijoIzq):\n",
+    "                    cola.append(hijoIzq)\n",
+    "                if(hijoDer):\n",
+    "                    cola.append(hijoDer)\n",
+    "            return pesosPorNivel\n",
+    "        else:\n",
+    "            return None\n",
+    "    "
    ]
   },
   {
@@ -275,7 +309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +364,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -362,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -426,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -439,7 +473,7 @@
    ],
    "source": [
     "busqueda = 58\n",
-    "resultado = abb.buscarNodo(busqueda)\n",
+    "resultado = abb.buscarNodoPorValor(busqueda)\n",
     "if(resultado):\n",
     "    print(\"El nodo con valor \", busqueda, \" si se encuentra y está con la llave de acceso \", resultado.llave, \" y su padre es: \", resultado.padre.llave)\n",
     "else:\n",
@@ -448,7 +482,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": 65,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Si se encuentra la llave  58  en el nodo con valor  58\n",
+      "El nodo con llave  58  si se encuentra y está con el valor  58  y su padre es:  45\n"
+     ]
+    }
+   ],
+   "source": [
+    "busqueda = \"58\"\n",
+    "resultado = abb.buscarNodoPorLlave(busqueda)\n",
+    "if(resultado):\n",
+    "    print(\"El nodo con llave \", busqueda, \" si se encuentra y está con el valor \", resultado.valor, \" y su padre es: \", resultado.padre.llave)\n",
+    "else:\n",
+    "    print(\"El valor \", busqueda, \" no se encuentra en el árbol.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -472,7 +531,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -491,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -510,7 +569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -529,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -565,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -586,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -676,6 +735,43 @@
    "source": [
     "#Nodos con sus balotas\n",
     "abb.NodosConSusBalotas(abb.raiz)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Los pesos por niveles son:\n",
+      "[1, 2, 4, 8]\n",
+      "------------------------\n",
+      "El peso del nivel  1  es  1\n",
+      "------------------------\n",
+      "El peso del nivel  2  es  2\n",
+      "------------------------\n",
+      "El peso del nivel  3  es  4\n",
+      "------------------------\n",
+      "El peso del nivel  4  es  8\n",
+      "------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Peso del árbol por niveles\n",
+    "listaPesos = abb.PesoPorNiveles(abb.raiz)\n",
+    "if(listaPesos):\n",
+    "    print(\"Los pesos por niveles son:\")\n",
+    "    print(listaPesos)\n",
+    "    print(\"------------------------\")\n",
+    "    nivel = 1\n",
+    "    for p in listaPesos:\n",
+    "        print(\"El peso del nivel \", nivel, \" es \", p)\n",
+    "        nivel += 1\n",
+    "        print(\"------------------------\")"
    ]
   },
   {
