Eliminación de un nodo en un BST

--- a/9. TAD Árbol Binario de Búsqueda - BST.ipynb
+++ b/9. TAD Árbol Binario de Búsqueda - BST.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,6 +43,9 @@
     "    def PonerHijoDerecho(self, hijo):\n",
     "        self.hijoDerecho = hijo\n",
     "    \n",
+    "    def PonerPadre(self, padre):\n",
+    "        self.padre = padre\n",
+    "    \n",
     "    #Validar sí el nodo es raíz\n",
     "    def EsNodoRaiz(self):\n",
     "        return not self.padre\n",
@@ -55,8 +58,14 @@
     "    def ObtenerNivel(self):\n",
     "        return self.nivel\n",
     "    \n",
+    "    def EsHijoIzquierdo(self):\n",
+    "        if(self.padre):\n",
+    "            return self.valor == self.padre.ObtenerHijoIzquierdo().valor\n",
     "    \n",
-    "    "
+    "    def EsHijoDerecho(self):\n",
+    "        if(self.padre):\n",
+    "            return self.valor == self.padre.ObtenerHijoDerecho().valor\n",
+    "        "
    ]
   },
   {
@@ -69,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +305,64 @@
     "            return pesosPorNivel\n",
     "        else:\n",
     "            return None\n",
-    "    "
+    "    \n",
+    "    def EliminarNodo(self, busqueda):\n",
+    "        if(self.raiz):\n",
+    "            nodoPorEliminar = self.buscarNodoPorValor(busqueda)\n",
+    "            if(nodoPorEliminar):\n",
+    "                self._eliminarNodo(nodoPorEliminar)\n",
+    "        else:\n",
+    "            print(\"El árbol está vacío.\")\n",
+    "    \n",
+    "    def _eliminarNodo(self, nodo):\n",
+    "        #caso 1: El nodo es hoja\n",
+    "        if(nodo.EsNodoHoja()):\n",
+    "            if(nodo.EsHijoIzquierdo()):\n",
+    "                nodo.padre.PonerHijoIzquierdo(None)\n",
+    "            else:\n",
+    "                nodo.padre.PonerHijoDerecho(None)\n",
+    "            nodo.PonerPadre(None)\n",
+    "        else:\n",
+    "            #caso 2: tiene un solo hijo\n",
+    "            if(not (nodo.ObtenerHijoDerecho() and nodo.ObtenerHijoIzquierdo())):\n",
+    "                hijo = None\n",
+    "                if(nodo.ObtenerHijoIzquierdo()):\n",
+    "                    hijo = nodo.ObtenerHijoIzquierdo()\n",
+    "                else:\n",
+    "                    hijo = nodo.ObtenerHijoDerecho()\n",
+    "                self.DisminuirNivel(hijo)\n",
+    "                hijo.PonerPadre(nodo.padre)\n",
+    "                if(nodo.EsHijoIzquierdo()):\n",
+    "                    nodo.padre.PonerHijoIzquierdo(hijo)\n",
+    "                else:\n",
+    "                    nodo.padre.PonerHijoDerecho(hijo)\n",
+    "                nodo.PonerHijoDerecho(None)\n",
+    "                nodo.PonerPadre(None)\n",
+    "            else:\n",
+    "                sucesor = self.ObtenerSucesor(nodo.ObtenerHijoDerecho())\n",
+    "                if(sucesor.ObtenerHijoDerecho()):\n",
+    "                    sucesor.ObtenerHijoDerecho().PonerPadre(sucesor.padre)\n",
+    "                    sucesor.padre.PonerHijoIzquierdo(sucesor.ObtenerHijoDerecho())\n",
+    "                sucesor.PonerHijoDerecho(nodo.ObtenerHijoDerecho())\n",
+    "                sucesor.PonerHijoIzquierdo(nodo.ObtenerHijoIzquierdo())\n",
+    "                sucesor.PonerPadre(nodo.padre)\n",
+    "                if(nodo.EsNodoRaiz()):\n",
+    "                    self.raiz = sucesor\n",
+    "                nodo.PonerPadre(None)\n",
+    "                nodo.PonerHijoIzquierdo(None)\n",
+    "                nodo.PonerHijoDerecho(None)\n",
+    "\n",
+    "    def ObtenerSucesor(self, nodo):\n",
+    "        while(nodo.ObtenerHijoIzquierdo()):\n",
+    "            nodo = nodo.ObtenerHijoIzquierdo()\n",
+    "        return nodo\n",
+    "                \n",
+    "    def DisminuirNivel(self, nodo):\n",
+    "        if(nodo):\n",
+    "            nodo.nivel -= 1\n",
+    "            self.DisminuirNivel(nodo.ObtenerHijoIzquierdo())\n",
+    "            self.DisminuirNivel(nodo.ObtenerHijoDerecho())\n",
+    "        "
    ]
   },
   {
@@ -309,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [
     {
@@ -364,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +462,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 197,
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 198,
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 199,
    "metadata": {},
    "outputs": [
     {
@@ -482,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 200,
    "metadata": {
     "scrolled": true
    },
@@ -507,7 +573,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 201,
    "metadata": {},
    "outputs": [
     {
@@ -531,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 202,
    "metadata": {},
    "outputs": [
     {
@@ -550,7 +616,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 203,
    "metadata": {},
    "outputs": [
     {
@@ -569,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 204,
    "metadata": {},
    "outputs": [
     {
@@ -588,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 205,
    "metadata": {},
    "outputs": [
     {
@@ -624,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 206,
    "metadata": {},
    "outputs": [
     {
@@ -645,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 207,
    "metadata": {},
    "outputs": [
     {
@@ -694,7 +760,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 208,
    "metadata": {},
    "outputs": [
     {
@@ -739,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 209,
    "metadata": {},
    "outputs": [
     {
@@ -772,6 +838,173 @@
     "        print(\"El peso del nivel \", nivel, \" es \", p)\n",
     "        nivel += 1\n",
     "        print(\"------------------------\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 210,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "abb.EliminarNodo(34)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 211,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El recorrido en amplitud es:\n",
+      "[67, 23, 100, 11, 45, 82, 123, 4, 17, 58, 71, 93, 111, 157]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Recorrido en Amplitud\n",
+    "abb.imprimir_amplitud(abb.raiz)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 212,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No está\n"
+     ]
+    }
+   ],
+   "source": [
+    "nodo = abb.buscarNodoPorValor(34)\n",
+    "if(not nodo):\n",
+    "    print(\"No está\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 213,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "abb.EliminarNodo(45)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 214,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No está\n"
+     ]
+    }
+   ],
+   "source": [
+    "nodo = abb.buscarNodoPorValor(45)\n",
+    "if(not nodo):\n",
+    "    print(\"No está\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 215,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El recorrido en amplitud es:\n",
+      "[67, 23, 100, 11, 58, 82, 123, 4, 17, 71, 93, 111, 157]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Recorrido en Amplitud\n",
+    "abb.imprimir_amplitud(abb.raiz)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 216,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Se ha agregado como hijo derecho de  71  a  78  en el nivel 5\n",
+      "Se ha agregado como hijo izquierdo de  78  a  73  en el nivel 6\n",
+      "Se ha agregado como hijo derecho de  78  a  79  en el nivel 6\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "abb.AgregarNodo(\"78\", 78)\n",
+    "abb.AgregarNodo(\"73\", 73)\n",
+    "abb.AgregarNodo(\"79\", 79)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 217,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El recorrido en amplitud es:\n",
+      "[67, 23, 100, 11, 58, 82, 123, 4, 17, 71, 93, 111, 157, 78, 73, 79]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Recorrido en Amplitud\n",
+    "abb.imprimir_amplitud(abb.raiz)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 218,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "abb.EliminarNodo(67)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 219,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El recorrido en amplitud es:\n",
+      "[71, 23, 100, 11, 58, 82, 123, 4, 17, 78, 93, 111, 157, 73, 79]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Recorrido en Amplitud\n",
+    "abb.imprimir_amplitud(abb.raiz)"
    ]
   },
   {
